--- a/reference.bib
+++ b/reference.bib
@@ -29,7 +29,6 @@
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -57,13 +56,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -356,6 +355,7 @@
   number  = {3}
 }
 
+
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
   title   = {Integer-grid maps for reliable quad meshing},
@@ -364,7 +364,6 @@
   volume  = {32},
   number  = {4}
 }
-
 
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
@@ -393,6 +392,7 @@
   year      = {2016}
 }
 
+
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
   title   = {On linear variational surface deformation methods},
@@ -401,7 +401,6 @@
   volume  = {14},
   number  = {1}
 }
-
 
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
@@ -459,6 +458,7 @@
   year      = {2020}
 }
 
+
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
   author  = {Bugliarello, Emanuele and Cotterell, Ryan and Okazaki, Naoaki and Elliott, Desmond},
@@ -466,7 +466,6 @@
   volume  = {9},
   year    = {2021}
 }
-
 
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
@@ -484,6 +483,7 @@
   volume  = {30},
   number  = {7}
 }
+
 
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
@@ -503,13 +503,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -518,13 +518,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
@@ -540,7 +540,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
@@ -555,6 +554,7 @@
   booktitle = {Proceedings of the sixth annual symposium on Computational geometry},
   year      = {1990}
 }
+
 
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
@@ -639,13 +639,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
   author    = {Cheng, Zhang and Wan, Haocheng and Shen, Xinyi and Wu, Zizhao},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
@@ -716,13 +716,13 @@
   number  = {2}
 }
 
-
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
   title     = {Anisotropic geometric diffusion in surface processing},
   booktitle = {Proc. of the conference on Visualization},
   year      = {2000}
 }
+
 
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
@@ -746,7 +746,6 @@
   year   = {2018}
 }
 
-
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
   title   = {Curve-skeleton properties, applications, and algorithms},
@@ -755,6 +754,7 @@
   volume  = {13},
   number  = {3}
 }
+
 
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
@@ -923,7 +923,6 @@
   number  = {6}
 }
 
-
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -932,6 +931,7 @@
   volume  = {27},
   number  = {5}
 }
+
 
 @article{Engel2021,
   title   = {Point transformer},
@@ -966,7 +966,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
@@ -982,6 +981,7 @@
   year      = {2022}
 }
 
+
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
   title     = {Filter forests for learning data-dependent convolutional kernels},
@@ -996,13 +996,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
   booktitle = {ICLR Workshop},
   year      = {2019}
 }
+
 
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
@@ -1017,7 +1017,6 @@
   journal = SIG,
   year    = {2014}
 }
-
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1035,6 +1034,7 @@
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
+
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1241,7 +1241,6 @@
   year      = {1999}
 }
 
-
 @inproceedings{Gutmann2010,
   author    = {Gutmann, Michael and Hyv{\"a}rinen, Aapo},
   title     = {Noise-Contrastive Estimation: A new estimation principle for unnormalized statistical models},
@@ -1264,6 +1263,7 @@
   booktitle = ICLR,
   year      = {2017}
 }
+
 
 @inproceedings{Hadsell2006,
   author    = {Raia Hadsell and Sumit Chopra and Yann LeCun},
@@ -1391,7 +1391,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{He2020,
   author    = {Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross Girshick},
   booktitle = CVPR,
@@ -1406,6 +1405,7 @@
   title     = {Masked Autoencoders Are Scalable Vision Learners},
   year      = {2022}
 }
+
 
 @inproceedings{Hegde2016,
   author    = {Vishakh Hegde and Reza Zadeh},
@@ -1462,7 +1462,6 @@
   year      = {2020}
 }
 
-
 @article{Huang2006,
   author  = {Huang, Jin and Shi, Xiaohan and Liu, Xinguo and Zhou, Kun and Wei, Li-Yi and Teng, Shang-Hua and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Subspace gradient domain mesh deformation},
@@ -1481,6 +1480,7 @@
   volume  = {2},
   number  = {2}
 }
+
 
 @article{Huang2011a,
   author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
@@ -1662,7 +1662,6 @@
   number  = {4}
 }
 
-
 @article{Kalantari2015,
   author  = {Kalantari, Nima Khademi and Bako, Steve and Sen, Pradeep},
   title   = {A machine learning approach for filtering {Monte Carlo} noise},
@@ -1671,6 +1670,7 @@
   volume  = {34},
   number  = {4}
 }
+
 
 @article{Kalogerakis2010,
   author  = {Kalogerakis, Evangelos and Hertzmann, Aaron and Singh, Karan},
@@ -2079,13 +2079,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Liu2018a,
   title     = {See and think: Disentangling semantic scene completion},
   author    = {Liu, Shice and Hu, Yu and Zeng, Yiming and Tang, Qiankun and Jin, Beibei and Han, Yinhe and Li, Xiaowei},
   booktitle = NeurIPS,
   year      = {2018}
 }
+
 
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
@@ -2150,13 +2150,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2179,13 +2179,13 @@
   year      = {2015}
 }
 
-
 @book{Logan2017,
   title     = {A first course in the finite element method},
   author    = {Logan, Daryl L},
   year      = {2017},
   publisher = {Nelson Education}
 }
+
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2200,7 +2200,6 @@
   booktitle = {SIGGRAPH},
   year      = {1987}
 }
-
 
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
@@ -2219,6 +2218,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2226,13 +2226,13 @@
   year      = {2017}
 }
 
-
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
+
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2248,13 +2248,13 @@
   year    = {2008}
 }
 
-
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
   title     = {Feature detection on {3D} face surfaces for pose normalisation and recognition},
   booktitle = {Biometrics: Theory Applications and Systems (BTAS)},
   year      = {2010}
 }
+
 
 @inproceedings{Makhzani2016,
   author       = {Alireza Makhzani and Jonathon Shlens and Navdeep Jaitly and Ian J. Goodfellow},
@@ -2663,13 +2663,13 @@
   year        = {2018}
 }
 
-
 @inproceedings{Radford2021,
   title     = {Learning transferable visual models from natural language supervision},
   author    = {Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
   booktitle = ICML,
   year      = {2021}
 }
+
 
 @article{Raffel2019,
   title   = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
@@ -2685,7 +2685,6 @@
   booktitle = ICML,
   year      = {2019}
 }
-
 
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
@@ -2703,6 +2702,7 @@
   number  = {2},
   year    = {2019}
 }
+
 
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
@@ -2864,13 +2864,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
   title     = {{SHREC'16 Track} -- Large-scale {3D} shape retrieval from {ShapeNetCore55}},
   booktitle = {Eurographics Workshop on 3D Object Retrieval},
   year      = {2016}
 }
+
 
 @inproceedings{Schaefer2004,
   title     = {Dual marching cubes: Primal contouring of dual grids},
@@ -2886,7 +2886,6 @@
   year      = {2015}
 }
 
-
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
   title   = {Cascades of regression tree fields for image restoration},
@@ -2895,6 +2894,7 @@
   volume  = {38},
   number  = {4}
 }
+
 
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
@@ -2954,7 +2954,6 @@
   number  = {3}
 }
 
-
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2963,6 +2962,7 @@
   number  = {3},
   year    = {2007}
 }
+
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2978,13 +2978,13 @@
   year      = {2018}
 }
 
-
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
   title   = {Improved training with curriculum {GANs}},
   journal = {arXiv preprint arXiv:1807.09295},
   year    = {2018}
 }
+
 
 @article{Sharp2020,
   title   = {You can find geodesic paths in triangle meshes by just flipping edges},
@@ -3051,7 +3051,6 @@
   volume  = {43}
 }
 
-
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
   title   = {Unsupervised co-segmentation of a set of shapes via descriptor-space spectral clustering},
@@ -3069,6 +3068,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
   author    = {Simonovsky, Martin and Komodakis, Nikos},
@@ -3076,13 +3076,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
@@ -3124,6 +3124,13 @@
   title  = {A general framework for bilateral and mean shift filtering},
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
+}
+
+@inproceedings{Song2015,
+  title     = {{SUN RGB-D}: A {RGB-D} scene understanding benchmark suite},
+  author    = {Song, Shuran and Lichtenberg, Samuel P and Xiao, Jianxiong},
+  booktitle = CVPR,
+  year      = {2015}
 }
 
 
