--- a/reference.bib
+++ b/reference.bib
@@ -64,6 +64,7 @@
   year      = {2003}
 }
 
+
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -72,7 +73,6 @@
   number  = {2},
   year    = {2020}
 }
-
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -365,6 +365,7 @@
   number  = {4}
 }
 
+
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
   title   = {Quad-mesh generation and processing: a survey},
@@ -373,7 +374,6 @@
   volume  = {32},
   number  = {6}
 }
-
 
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
@@ -402,12 +402,12 @@
   number  = {1}
 }
 
+
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
   year   = {2010},
   author = {Mario Botsch and Leif Kobbelt and Mark Pauly and Pierre Alliez and Bruno L\'{e}vy}
 }
-
 
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
@@ -467,13 +467,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
   booktitle = CVPR,
   year      = {2012}
 }
-
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -494,6 +494,7 @@
   number  = {9-11}
 }
 
+
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
   title   = {Displaced dynamic expression regression for real-time facial tracking and animation},
@@ -510,13 +511,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
   title     = {Deep clustering for unsupervised learning of visual features},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
@@ -525,13 +526,13 @@
   year      = {2020}
 }
 
-
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
   author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
   journal = {arXiv preprint arXiv:1512.03012},
   year    = {2015}
 }
+
 
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
@@ -546,7 +547,6 @@
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
-
 
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
@@ -564,6 +564,7 @@
   number    = {3},
   booktitle = CGF
 }
+
 
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
@@ -630,6 +631,13 @@
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
+}
+
+@inproceedings{Chen2022,
+  title     = {Scaling up Kernels in {3D CNNs}},
+  author    = {Yukang Chen and Jianhui Liu and Xiaojuan Qi and X. Zhang and Jian Sun and Jiaya Jia},
+  booktitle = NeurIPS,
+  year      = {2022}
 }
 
 @inproceedings{Cheng2021,
