--- a/reference.bib
+++ b/reference.bib
@@ -28,7 +28,6 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -74,6 +73,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -114,7 +114,6 @@
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
-
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -375,6 +374,7 @@
   number  = {6}
 }
 
+
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -409,6 +409,7 @@
   author = {Mario Botsch and Leif Kobbelt and Mark Pauly and Pierre Alliez and Bruno L\'{e}vy}
 }
 
+
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
   title   = {Deep learning for robust normal estimation in unstructured point clouds},
@@ -417,7 +418,6 @@
   volume  = {35},
   number  = {5}
 }
-
 
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
@@ -450,7 +450,6 @@
   year    = {2017}
 }
 
-
 @inproceedings{Brown2020,
   title     = {Language models are few-shot learners},
   author    = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
@@ -474,6 +473,7 @@
   booktitle = CVPR,
   year      = {2012}
 }
+
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -504,12 +504,14 @@
   number  = {4}
 }
 
+
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -518,13 +520,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
@@ -565,7 +567,6 @@
   booktitle = CGF
 }
 
-
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -574,6 +575,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
@@ -598,12 +600,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -654,7 +658,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
   author    = {Chiang, Hung-Yueh and Lin, Yen-Liang and Liu, Yueh-Cheng and Hsu, Winston H},
@@ -691,6 +694,7 @@
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Chu2021,
   title   = {Conditional positional encodings for vision transformers},
@@ -731,7 +735,6 @@
   year      = {2000}
 }
 
-
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
   author  = {Cohen, Taco S and Geiger, Mario and K{\"o}hler, Jonas and Welling, Max},
@@ -763,13 +766,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
   booktitle = {ACM SIGGRAPH 2013 courses},
   year      = {2013}
 }
+
 
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
@@ -802,6 +805,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Dai2017a,
   author    = {Dai, Angela and Chang, Angel X. and Savva, Manolis and Halber, Maciej and Funkhouser, Thomas and Nie{\ss}ner, Matthias},
@@ -940,7 +944,6 @@
   number  = {5}
 }
 
-
 @article{Engel2021,
   title   = {Point transformer},
   author  = {Engel, Nico and Belagiannis, Vasileios and Dietmayer, Klaus},
@@ -989,7 +992,6 @@
   year      = {2022}
 }
 
-
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
   title     = {Filter forests for learning data-dependent convolutional kernels},
@@ -1011,7 +1013,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
   title     = {Structured prediction of unobserved voxels from a single depth image},
@@ -1019,12 +1020,14 @@
   year      = {2016}
 }
 
+
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
+
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1035,14 +1038,12 @@
   number  = {3}
 }
 
-
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
   title     = {Adaptively sampled distance fields: A general representation of shape for computer graphics},
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
-
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1052,6 +1053,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
@@ -1075,12 +1077,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
   title     = {Convolutional sequence to sequence learning},
   booktitle = ICML,
   year      = {2017}
 }
+
 
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
@@ -1256,7 +1260,6 @@
   year      = {2010}
 }
 
-
 @inproceedings{Gwak2020,
   title     = {Generative sparse detection networks for {3D} single-shot object detection},
   author    = {Gwak, JunYoung and Choy, Christopher and Savarese, Silvio},
@@ -1264,14 +1267,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
   author    = {Ha, David and Dai, Andrew and Le, Quoc V},
   booktitle = ICLR,
   year      = {2017}
 }
-
 
 @inproceedings{Hadsell2006,
   author    = {Raia Hadsell and Sumit Chopra and Yann LeCun},
@@ -1294,6 +1295,7 @@
   year      = {2017}
 }
 
+
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
   title   = {{DeepSketch2Face}: A deep learning based sketching system for {3D} face and caricature modeling},
@@ -1303,6 +1305,7 @@
   number  = {4}
 }
 
+
 @article{Han2019,
   author  = {Han, Zhizhong and Lu, Honglei and Liu, Zhenbao and Vong, Chi-Man and Liu, Yu-Shen and Zwicker, Matthias and Han, Junwei and Chen, CL Philip},
   journal = {IEEE Transactions on Image Processing},
@@ -1311,6 +1314,7 @@
   number  = {8},
   volume  = {28}
 }
+
 
 @inproceedings{Handa2015,
   title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
@@ -1406,14 +1410,12 @@
   year      = {2020}
 }
 
-
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
   booktitle = CVPR,
   title     = {Masked Autoencoders Are Scalable Vision Learners},
   year      = {2022}
 }
-
 
 @inproceedings{Hegde2016,
   author    = {Vishakh Hegde and Reza Zadeh},
@@ -1447,6 +1449,7 @@
   year      = {2021}
 }
 
+
 @article{Hu2012,
   author  = {Ruizhen Hu and Lubin Fan and Ligang Liu},
   title   = {Co-segmentation of {3D} shapes via subspace clustering},
@@ -1455,6 +1458,7 @@
   volume  = {31},
   number  = {5}
 }
+
 
 @inproceedings{Hu2019,
   title   = {{RandLA-Net}: Efficient Semantic Segmentation of Large-Scale Point Clouds},
@@ -1479,7 +1483,6 @@
   number  = {3}
 }
 
-
 @article{Huang2011,
   author  = {Huang, Guang-Bin and Wang, Dian Hui and Lan, Yuan},
   title   = {{Extreme learning machines: a survey}},
@@ -1488,7 +1491,6 @@
   volume  = {2},
   number  = {2}
 }
-
 
 @article{Huang2011a,
   author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
@@ -1525,12 +1527,14 @@
   articleno = {20}
 }
 
+
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
   title     = {{KinectFusion}: real-time {3D} reconstruction and interaction using a moving depth camera},
   booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
   year      = {2011}
 }
+
 
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
@@ -1679,7 +1683,6 @@
   number  = {4}
 }
 
-
 @article{Kalogerakis2010,
   author  = {Kalogerakis, Evangelos and Hertzmann, Aaron and Singh, Karan},
   title   = {Learning {3D} mesh segmentation and labeling},
@@ -1718,6 +1721,7 @@
   booktitle = ICLR,
   year      = {2017}
 }
+
 
 @inproceedings{Karras2019,
   author    = {Karras, Tero and Laine, Samuli and Aila, Timo},
@@ -1775,6 +1779,14 @@
   title   = {Poisson Surface Reconstruction with Envelope Constraints},
   author  = {Misha Kazhdan and Ming Chuang and Szymon Rusinkiewicz and Hugues Hoppe},
   journal = SGP,
+  year    = {2020}
+}
+
+@article{Khosla2020,
+  title   = {Supervised contrastive learning},
+  author  = {Khosla, Prannay and Teterwak, Piotr and Wang, Chen and Sarna, Aaron and Tian, Yonglong and Isola, Phillip and Maschinot, Aaron and Liu, Ce and Krishnan, Dilip},
+  journal = {Advances in Neural Information Processing Systems},
+  volume  = {33},
   year    = {2020}
 }
 
@@ -2056,6 +2068,13 @@
   number  = {5}
 }
 
+@inproceedings{Lin2017,
+  title     = {Feature pyramid networks for object detection},
+  author    = {Lin, Tsung-Yi and Doll{\'a}r, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
+  booktitle = CVPR,
+  year      = {2017}
+}
+
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2094,7 +2113,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
   author    = {Liu, Yu and Song, Guanglu and Shao, Jing and Jin, Xiao and Wang, Xiaogang},
@@ -2115,6 +2133,7 @@
   booktitle = NeurIPS,
   year      = {2019}
 }
+
 
 @inproceedings{Liu2020,
   title     = {Neural sparse voxel fields},
@@ -2165,7 +2184,6 @@
   year      = {2021}
 }
 
-
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
   author  = {Liu, Xiao and Zhang, Fanjin and Hou, Zhenyu and Mian, Li and Wang, Zhaoyu and Zhang, Jing and Tang, Jie},
@@ -2187,13 +2205,13 @@
   year      = {2015}
 }
 
+
 @book{Logan2017,
   title     = {A first course in the finite element method},
   author    = {Logan, Daryl L},
   year      = {2017},
   publisher = {Nelson Education}
 }
-
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2209,13 +2227,20 @@
   year      = {1987}
 }
 
+@inproceedings{Loshchilov2017,
+  title     = {Decoupled weight decay regularization},
+  author    = {Loshchilov, Ilya and Hutter, Frank},
+  booktitle = ICLR,
+  year      = {2019}
+}
+
+
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
   title     = {Adaptive radial basis function nonlinearities, and the problem of generalisation},
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
-
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2226,13 +2251,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
@@ -2256,13 +2281,13 @@
   year    = {2008}
 }
 
+
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
   title     = {Feature detection on {3D} face surfaces for pose normalisation and recognition},
   booktitle = {Biometrics: Theory Applications and Systems (BTAS)},
   year      = {2010}
 }
-
 
 @inproceedings{Makhzani2016,
   author       = {Alireza Makhzani and Jonathon Shlens and Navdeep Jaitly and Ian J. Goodfellow},
@@ -2280,6 +2305,7 @@
   volume  = {14},
   number  = {6}
 }
+
 
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
@@ -2381,6 +2407,13 @@
   title     = {Structure-aware shape processing},
   booktitle = {SIGGRAPH 2014 Courses},
   year      = {2014}
+}
+
+@misc{mmdet3d2020,
+  title        = {{MMDetection3D: OpenMMLab} next-generation platform for general {3D} object detection},
+  author       = {MMDetection3D Contributors},
+  howpublished = {\url{https://github.com/open-mmlab/mmdetection3d}},
+  year         = {2020}
 }
 
 @inproceedings{Mo2019,
@@ -2678,7 +2711,6 @@
   year      = {2021}
 }
 
-
 @article{Raffel2019,
   title   = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
   author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
@@ -2686,6 +2718,7 @@
   volume  = {21},
   year    = {2020}
 }
+
 
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
@@ -2700,7 +2733,6 @@
   booktitle = NeurIPS,
   year      = {2008}
 }
-
 
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
@@ -2720,6 +2752,7 @@
   number  = 2,
   year    = 2020
 }
+
 
 @article{Ramesh2022,
   title   = {Hierarchical text-conditional image generation with {CLIP} latents},
@@ -2827,6 +2860,13 @@
   year    = {2018},
   volume  = {37},
   number  = {2}
+}
+
+@inproceedings{Rozen2022,
+  title     = {Language-Grounded Indoor {3D} Semantic Segmentation in the Wild},
+  author    = {Rozenberszki, David and Litany, Or and Dai, Angela},
+  booktitle = ECCV,
+  year      = {2022}
 }
 
 @article{Ruckert2021,
